--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,14 @@ h1{
 label{
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 1em;
-    font-size: 2vw;
+    font-size: 1em;
 }
 
 input{
     border: none;
     background-color: #fff !important;
     padding: 0.5em;
-    font-size: 2vw;
+    font-size: 1em;
 }
 
 button{
@@ -74,4 +74,37 @@ button{
     font-size: 4vw;
     color: #ED4264;
     margin-top: 6em;
+}
+
+
+@media screen and (max-width: 650px){
+    .nav{
+        min-height: 200px;
+    
+    }
+
+    .right{
+        margin-top: 1em;
+    }
+
+    h1{
+        font-size: 1.5em;
+    }
+
+    label{
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: 1em;
+        font-size: 1em;
+    }
+    
+    input{
+        margin: 1em;
+        font-size: 0.7em;
+    }
+}
+
+@media screen and (max-width: 650px){
+    form{
+        float: right;
+    }
 }
